# ExecQueue

./: .gitignore  AGENTS.md  README.md  alembic.ini  opencode.json  pyproject.toml  pytest.ini  pytest_req017_regression.txt  test.db
.opencode/: CHANGELOG.md
alembic/: README.md  env.py
docs/: REQ-011-orchestrator-execution-preparation.md  REQ-011-orchestrator-review.md  _execqueue_flow.puml  implementation_test_strategy.md  telegram-notifications.md  telegram_create_flow.puml  validation.md
execqueue/: __init__.py  __main__.py  main.py  orchestrator.py  orchestrator_legacy.py  orchestrator_trigger.py  runtime.py  settings.py
logs/: opencode-prompt-4096-20260501-111625.txt  opencode-response-4096-20260501-111625.jsonl  opencode-summary-4096-20260501-111625.txt
requirements/: 3. Validation verbessern - härten der Validierungslogik.md  4. Telegram Commands - Remote-Steuerung.md  execqueue_architektur.md  opencode_server_setup.md
tests/: conftest.py  test_acp_e2e_validation.py  test_acp_health.py  test_acp_lifecycle.py  test_acp_probe.py  test_alembic_project_migration.py  test_api.py  test_commit_adopter.py  test_db_engine_session.py  test_db_health.py  test_db_runtime.py  test_execution_chain.py  test_execution_chain_basic.py  test_execution_chain_config.py  test_execution_chain_integration.py  test_execution_metrics_rates.py  test_git_helper.py  test_health_aggregation.py  test_health_mock.py  test_idempotency_service.py  test_intake_observability.py  test_lifespan_recovery.py  test_models.py  test_opencode_contract.py  test_opencode_reachability.py  (+65 more)
(+278 files in other folders)
