[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "execqueue"
version = "0.1.0"
description = "ExecQueue - Execution Queue System"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109",
    "pydantic-settings>=2.0",
]

[tool.setuptools.packages.find]
include = ["execqueue*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
    "uvicorn>=0.27",
]
telegram = [
    "python-telegram-bot>=20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
